(2023.01.18) 클래스의 선언과 정의

--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -128,10 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Computer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="(2023.01.13)참조 연산자.h" />
     <ClInclude Include="(2023.01.16)범위 기반 반복문+동적할당.h" />
+    <ClInclude Include="(2023.01.17)네임스페이스와 클래스.h" />
+    <ClInclude Include="Computer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
