--- a/testfile/testfile.vcxproj.filters
+++ b/testfile/testfile.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="(2023.01.18)생성자와 소멸자 클래스의 선언정의.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="%282023.01.19%29파일입출력.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
