--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="%282023.01.19%29파일입출력.h" />
     <ClInclude Include="(2023.01.25)얕은 복사 깊은복사.h" />
     <ClInclude Include="(2023.01.26)상속.h" />
+    <ClInclude Include="(2023.01.27)다중상속.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
