--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="(2023.02.01)가상소멸자, 리스트.h" />
     <ClInclude Include="(2023.02.02)템플릿, 큐, 스택.h" />
     <ClInclude Include="(2023.02.03)벡터.h" />
+    <ClInclude Include="(2023.02.06)이중포인터.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
