--- a/testfile/testfile.vcxproj.filters
+++ b/testfile/testfile.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="(2023.02.03)벡터.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.02.06)이중포인터.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
