(2023.02.09) 스마트 포인터

--- a/testfile/testfile.vcxproj.filters
+++ b/testfile/testfile.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="(2023.02.08)연관 컨테이너.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.02.09)업캐스팅.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
