--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="(2023.02.06)이중포인터.h" />
     <ClInclude Include="(2023.02.08)연관 컨테이너.h" />
     <ClInclude Include="(2023.02.09)업캐스팅.h" />
+    <ClInclude Include="(2023.02.13)스마트 포인터.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
