--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="(2023.02.09)업캐스팅.h" />
     <ClInclude Include="(2023.02.13)스마트 포인터.h" />
     <ClInclude Include="%282023.02.13%29단일 연결리스트.h" />
+    <ClInclude Include="(2023.02.14)연결리스트 추가 제거 함수.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
