--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="(2023.02.13)스마트 포인터.h" />
     <ClInclude Include="%282023.02.13%29단일 연결리스트.h" />
     <ClInclude Include="(2023.02.14)연결리스트 추가 제거 함수.h" />
+    <ClInclude Include="(2023.02.15이중 연결 리스트.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
