--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="(2023.02.14)연결리스트 추가 제거 함수.h" />
     <ClInclude Include="(2023.02.15이중 연결 리스트.h" />
     <ClInclude Include="(2023.02.16)더블 링크드 리스트 함수.h" />
+    <ClInclude Include="(2023.02.17)거품정렬.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
