--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -153,6 +153,8 @@
     <ClInclude Include="(2023.02.15이중 연결 리스트.h" />
     <ClInclude Include="(2023.02.16)더블 링크드 리스트 함수.h" />
     <ClInclude Include="(2023.02.17)거품정렬.h" />
+    <ClInclude Include="(2023.02.20)선택 정렬.h" />
+    <ClInclude Include="(2023.02.21)선형 큐.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
