--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="(2023.02.17)거품정렬.h" />
     <ClInclude Include="(2023.02.20)선택 정렬.h" />
     <ClInclude Include="(2023.02.21)선형 큐.h" />
+    <ClInclude Include="(2023.02.22)원형 큐.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
