--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -156,6 +156,8 @@
     <ClInclude Include="(2023.02.20)선택 정렬.h" />
     <ClInclude Include="(2023.02.21)선형 큐.h" />
     <ClInclude Include="(2023.02.22)원형 큐.h" />
+    <ClInclude Include="(2023.02.23)스택.h" />
+    <ClInclude Include="(2023.02.24)삽입 정렬.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
