--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="(2023.02.22)원형 큐.h" />
     <ClInclude Include="(2023.02.23)스택.h" />
     <ClInclude Include="(2023.02.24)삽입 정렬.h" />
+    <ClInclude Include="(2023.02.28)이중트리.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
