--- a/testfile/testfile.vcxproj.filters
+++ b/testfile/testfile.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClInclude Include="(2023.02.24)삽입 정렬.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="(2023.02.28)이중트리.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
