--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="(2023.02.24)삽입 정렬.h" />
     <ClInclude Include="(2023.02.28)이중트리.h" />
     <ClInclude Include="(2023.03.01)계수정렬과 대소문자 변환.h" />
+    <ClInclude Include="(2023.03.02~03)힙 자료구조.h" />
+    <ClInclude Include="(2023.03.06)해시테이블1.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
