--- a/testfile/testfile.vcxproj
+++ b/testfile/testfile.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="(2023.03.07)헤시테이블2.h" />
     <ClInclude Include="(2023.03.07)헤시테이블ver강사님.h" />
     <ClInclude Include="(2023.03.08)퀵정렬.h" />
+    <ClInclude Include="(2023.03.10) 병합정렬.h" />
     <ClInclude Include="Computer.h" />
     <ClInclude Include="string문.h" />
   </ItemGroup>
